LWCLearnwithFLOWOrg/force-app/main/default/objects/Contact_Stage__c/Contact_Stage__c.object-meta.xml
<CustomObject>
    <description>DO NOT USE UNLESS DIRECTED BY SYSTEM ADMINISTRATOR. This is a very specific staging table for large uploads of Contacts.</description>
    <label>Contact Stage</label>
    <nameField>
        <label>Email</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Stage</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>