LWCLearnwithFLOWOrg/force-app/main/default/objects/Contact_Stage__c/fields/Account_Match__c.field-meta.xml
<CustomField>
    <fullName>Account_Match__c</fullName>
    <description>AUTO - If an Account is matched using the website, then this will be the ID of that Account.</description>
    <label>Account Match</label>
    <length>18</length>
    <type>Text</type>
</CustomField>