LWCLearnwithFLOWOrg/force-app/main/default/objects/Contact_Stage__c/fields/Account_Match_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Match_Name__c</fullName>
    <description>AUTO - The name of the Account matched from the derived website.</description>
    <label>Account Match Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>