LWCLearnwithFLOWOrg/force-app/main/default/objects/Contact_Stage__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <description>MANUAL - The name of the Contact. In many import situations, we are given a full name column, which needs to be split into first name and last name.</description>
    <label>Contact Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>