LWCLearnwithFLOWOrg/force-app/main/default/objects/Contact_Stage__c/fields/Existing_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Existing_Contact_ID__c</fullName>
    <description>AUTO - Existing Contact ID if there is an email match.</description>
    <label>Existing Contact ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>