LWCLearnwithFLOWOrg/force-app/main/default/objects/Contact_Stage__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>AUTO - Generated by STAGE_ContactTrigger by parsing the Contact Name value.</description>
    <label>First Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>