LWCLearnwithFLOWOrg/force-app/main/default/objects/Contact_Stage__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>AUTO - Generated by STAGE_ContactTrigger. The Last Name of the Contact, which is parsed from the Contact Name (full name) value.</description>
    <label>Last Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>