LWCLearnwithFLOWOrg/force-app/main/default/objects/Contact_Stage__c/fields/Website_Guess__c.field-meta.xml
<CustomField>
    <fullName>Website_Guess__c</fullName>
    <description>AUTO - A website guess derived from the email domain. Used for attempted matching to Accounts.</description>
    <label>Website Guess</label>
    <length>100</length>
    <type>Text</type>
</CustomField>